refac:removendo minha foto, nome e atuação
- Quando projeto for baixado, não baixar com minha foto nome e atuação;

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     <div class="author">
-        <img src="/imagens/perfil.jpeg" alt="Imagem de perfil de um rapaz de cor parda, cabelos pretos e curto, com uma blusa de cor verde e com o fundo da imagem de cor branca.">
+        <img src="/imagens/perfil.png" alt="Imagem de perfil de usuário não identificado com o fundo de cor branca.">
 
         <div>
-            <h2>Maycon Douglas</h2>
-            <h4 class="author_job">Desenvolvedor de Software</h4>
+            <h2>Nome do usuário</h2>
+            <h4 class="author_job">Atuação do usuário</h4>
         </div>
     </div>
 
